[package]
name = "rust-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
h2 = "0.3.13"
http = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
env_logger = { version = "0.9", default-features = false }
tokio-rustls = "0.23.2"
webpki-roots = "0.22.2"
boring = "2.0.0"
tokio-boring = "2.1.4"
bytes = "1.1.0"
futures = "0.3.21"
once_cell = "1"
socks = "0.3.2"
brotli = "3.3.4"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]